<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="creation">Creations</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_here">Create here!</string>
    <string name="hey_there_what_s_your_name">Hey there!\nWhat\'s your name?</string>
    <string name="full_name">Full name</string>
    <string name="next">Next</string>
    <string name="be_secure_set_a_password">Be Secure\nSet a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="tell_me_a_little_bit_about_yourself">Tell us a little bit about yourself</string>
    <string name="your_email">Your email</string>
    <string name="phone_number">Phone number</string>
    <string name="finish">Finish</string>
    <string name="show_videos_on_device">Show videos on device</string>
    <string name="record_video">Record video</string>
    <string name="flip_camera">Flip camera</string>
    <string name="camera_flash">Camera flash</string>
    <string name="camera_settings">Camera settings</string>
    <string name="cancel" tools:override="true">Cancel</string>
    <string name="check">Check</string>
    <string name="play_pause">Play/pause</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="flip_video">flip_video</string>
    <string name="caption">Caption…</string>
    <string name="tag_friends">&#160;&#160;Tag Friends</string>
    <string name="add_location">Add Location</string>
    <string name="choose_category">&#160;&#160;Categories</string>
    <string name="facebook">\tFacebook</string>
    <string name="instagram">\tInstagram</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="post_thumbnail">post_thumbnail</string>
    <string name="profile_pic">Profile pic</string>
    <string name="camera_failed_message">Failed to start camera service\nPlease Restart your device.</string>
    <string name="please_allow_all_permissions_message">We understand that you want to be on the safe side\n
        But please allow the permissions so that you can use Teazer to its full potential!</string>
    <string name="whoa">Whoa!</string>
    <string name="back">Back</string>
    <string name="upload">Upload</string>
    <string name="continue_with_email_phone">Continue via email or phone</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="video_fun_friends">Video. Fun. Friends.</string>
    <string name="username_email_mobile">Username / Email / Mobile</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="up">Up</string>
    <string name="enter_email_mobile">Enter Email or Mobile</string>
    <string name="reset_password">Reset password</string>
    <string name="name">Name</string>
    <string name="okay_let_s_roll">Okay, Let\'s roll</string>
    <string name="uploading_your_video">Uploading your video…</string>
    <string name="login_through_otp">Login with OTP</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="facebook_app_id">163105567761892</string>
    <string name="fb_login_protocol_scheme">fb163105567761892</string>
    <string name="default_notification_channel_id">teazer_notification_01</string>
    <string name="google_web_client_id" tools:ignore="TypographyDashes">
        441699527747-sh3631k1ed2q4m948j0bhqk2ppffvtvs.apps.googleusercontent.com
    </string>
    <string name="google_places_api_key">AIzaSyAPQLiVYK7EByn0Og-4dl-_8k4rtA9S3IY</string>
    <string name="logout">Logout</string>
    <string name="okay">Okay</string>
    <string name="not_connected_message">No internet connection!</string>
    <string name="oi">Oi!</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="verified">Verified\t</string>
    <string name="please_enter_your_email_or_mobile">Please enter your email or mobile in order to reset your password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="email_sent">Email sent\t</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="incorrect_username_password">Username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="no_text"> </string>
    <string name="registration_message">You are not registered yet. Use the registration button to complete your registration.</string>
    <string name="registration_failed">Your email or password is already in use</string>
    <string name="code">Code</string>
    <string name="otp_sent_1">An OTP has been sent to </string>
    <string name="retry_in">Retry in</string>
    <string name="you_can_try_again">You can retry if you didn\'t yet receive the OTP</string>
    <string name="login_through_password">Login with password</string>
    <string name="request_otp">Request OTP</string>
    <string name="login_through_otp_error">
        Email or Phone number does not match with existing records, or you have reached the maximum otp attempts.
    </string>
    <string name="video_image_thumbnail">Video imageView thumbnail</string>
    <string name="proceed">Proceed</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="you_are_almost_there">You\'re almost there,\njust a few things more</string>
    <string name="add_user">Add user</string>
    <string name="title_activity_video_upload">Upload Video</string>
    <string name="action_settings">Settings</string>
    <string name="video_preview_thumbnail">Video preview thumbnail</string>
    <string name="react_title">Title</string>
    <string name="share_to">Share to</string>
    <string name="retake">Retake</string>
    <string name="see_nearby_places">See nearby places</string>
    <string name="in_order_to_see_nearby_places">In order to see nearby places you need to turn on your location first.</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="nearby_place_side_image">Nearby place side imageView</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="save_with_leading_spaces">Save&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="video_details">Last Night Bash at Delhi Fort so good experience</string>
    <string name="select_at_least_5_to_continue">Select at least 5 interests to continue</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="find_a_location">Find a location</string>
    <string name="select_a_location">Select a location</string>
    <string name="select_your_interests">Select your interests</string>
    <string name="select_at_least_5_interests">Select at least 5 interests</string>
    <string name="reactions">Reactions on Video</string>
    <string name="description">Media player control</string>
    <string name="share">Share</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="block">Block/Unblock</string>
    <string name="report">Report</string>
    <string name="title_activity_tab2">Tab2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="videos">Videos</string>
    <string name="title_activity_base_bottom_bar">BaseBottomBarActivity</string>
    <string name="dismiss">Dismiss</string>
    <string name="background_image">Background image</string>
    <string name="generic_bottom_icon">Generic bottom icon</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="notifications_fragment">Notifications fragment</string>
    <string name="this_is_the_caption">This is the caption</string>
    <string name="location_goes_here">Location goes here</string>
    <string name="_653_views_204_reactions">653 Views | 204 Reactions</string>
    <string name="prem_suman">Prem Suman</string>
    <string name="usermane_goes_here">\@usermane goes here</string>
    <string name="profile_bio_and_user_details_nthey_all_go_here">Profile bio and user details they all go here.</string>
    <string name="hobby">Photographer,Traveller,Dreamer.</string>
    <string name="user_detail">Follow me to see my creative Videos.</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="personasettings">Personal Settings</string>
    <string name="changecategories">Change Categories</string>
    <string name="react">React</string>
    <string name="already_exists">Username, Email or Phone Number already exists!\nPlease login instead.</string>
    <string name="already_exists_signup">
        "Username, email or phone number already exists.\nOr you may have reached maximum OTP retry attempts"
    </string>
    <string name="take_photo">Take photo</string>
    <string name="intro_message">This sample demonstrates how to record video using Camera2 API.</string>
    <string name="permission_request">Teazer needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="otp">OTP</string>
    <string name="new_password">New Password</string>
    <string name="password_successfully_reset">Password successfully reset!</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="select_up_to_5_categories">Select up to 5 interests</string>
    <string name="select_minimum_categories">Select at least 5 interests</string>
    <string name="tag_your_friends">Tag your friends</string>
    <string name="logging_you_in">Logging you in…</string>
    <string name="expanded_placeholder_image">Expanded placeholder image</string>
    <string name="follow">Follow</string>
    <string name="unblock">Unblock</string>
    <string name="unfollow">Following</string>
    <string name="background_profile">Background profile</string>
    <string name="your_details">Your Details</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_categories">Change Categories</string>
    <string name="account_settings">Account settings</string>
    <string name="my_account_info">My Account Info</string>
    <string name="most_popular">Most Popular</string>
    <string name="my_interests">My Interests</string>
    <string name="trending">Trending</string>
    <string name="featured_videos">Featured Videos</string>
    <string name="view_all">View all</string>
    <string name="validUsername">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@._</string>
    <string name="validPassword">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890~`!@#$%^*()_-+={}|[]:";'/?&amp;\</string>
    <string name="report_extra_remark_hint">Other Reason</string>
    <string name="report_btn_text">Report</string>
</resources>