<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/colorAccent2"
        android:scrollbarSize="@dimen/padding_half"
        android:layout_above="@+id/video_actions">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.cncoding.teazer.camera.VideoUploadFragment">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="320dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/video_thumbnail" />

            <TextView
                android:id="@+id/upload_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:layout_margin="@dimen/padding_default"
                android:layout_below="@+id/thumbnail"
                android:gravity="center"
                android:hint="@string/caption"
                style="@style/AppTheme.RoundedTextViewWithBoundary"/>

            <Space
                android:id="@+id/spacer"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_below="@+id/upload_caption"
                android:layout_alignBottom="@+id/upload_tag"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/upload_tag"
                android:text="@string/tag_friends"
                style="@style/AppTheme.RoundedButtonWithBoundary"
                android:layout_below="@+id/upload_caption"
                android:layout_alignStart="@+id/upload_caption"
                android:layout_toStartOf="@+id/spacer" />

            <Button
                android:id="@+id/upload_add_location"
                android:text="@string/add_location"
                style="@style/AppTheme.RoundedButtonWithBoundary"
                android:layout_below="@+id/upload_caption"
                android:layout_alignEnd="@+id/upload_caption"
                android:layout_toEndOf="@+id/spacer" />

            <TextView
                android:id="@+id/upload_choose_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_category"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_content"
                android:padding="@dimen/padding_default"
                android:layout_margin="@dimen/padding_default"
                android:layout_centerHorizontal="true"
                android:foreground="@drawable/ripple_dark"
                android:gravity="center"
                android:layout_below="@+id/spacer"/>

            <CheckedTextView
                android:id="@+id/upload_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:text="@string/facebook"
                android:background="@drawable/bg_checked_text_view"
                android:foreground="@drawable/ripple_dark"
                android:padding="@dimen/padding_default"
                android:layout_margin="@dimen/padding_default"
                android:layout_below="@+id/upload_choose_category"
                android:layout_alignStart="@+id/upload_caption"
                android:layout_toStartOf="@+id/spacer"
                android:drawableStart="@drawable/logo_facebook"/>

            <CheckedTextView
                android:id="@+id/upload_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:text="@string/instagram"
                android:background="@drawable/bg_checked_text_view"
                android:foreground="@drawable/ripple_dark"
                android:padding="@dimen/padding_default"
                android:layout_margin="@dimen/padding_default"
                android:layout_below="@+id/upload_choose_category"
                android:layout_alignEnd="@+id/upload_caption"
                android:layout_toEndOf="@+id/spacer"
                android:drawableStart="@drawable/logo_instagram"/>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/video_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDisabled"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/video_upload_cancel_btn"
            style="@style/AppTheme.CancelUploadButtonsTheme"
            android:drawableStart="@drawable/ic_previous"
            android:text="@string/back"
            android:paddingStart="@dimen/padding_double"
            android:paddingEnd="0dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/cancel"
            android:layout_toStartOf="@+id/spacer1"/>

        <Button
            android:id="@+id/video_upload_check_btn"
            style="@style/AppTheme.CancelUploadButtonsTheme"
            android:drawableEnd="@drawable/ic_upload"
            android:text="@string/upload"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_double"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/check"
            android:layout_toEndOf="@+id/spacer1" />

        <Space
            android:id="@+id/spacer1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent3"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/video_upload_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorTranslucentBg"
        android:visibility="invisible"
        android:clickable="true">

        <ProgressBar
            android:id="@+id/video_upload_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:indeterminate="false"
            android:progressDrawable="@drawable/bg_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"/>

        <com.cncoding.teazer.customViews.ProximaNovaRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="@dimen/text_size_h3"
            android:text="@string/uploading_your_video"/>

    </LinearLayout>

</RelativeLayout>