<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/colorBg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reportTitlesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/report_extra_remark_hint"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@+id/reportTitlesRecyclerView"
        android:id="@+id/report_remark"
        android:maxLines="8"
        android:lines="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.cncoding.teazer.customViews.ProximaNovaSemiboldButton
        android:id="@+id/submitReport"
        style="@style/AppTheme.CancelUploadButtonsTheme"
        android:text="@string/report_btn_text"
        android:contentDescription="@string/check"
        android:layout_alignParentBottom="true"/>

    <pl.droidsonroids.gif.GifTextView
        android:layout_width="100dp"
        android:id="@+id/loader"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_height="100dp"
        android:background="@drawable/ic_loader"/>
</RelativeLayout>