<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.cncoding.teazer.authentication.LoginFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_default">

            <com.cncoding.teazer.customViews.SignPainterTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:padding="@dimen/padding_default"
                android:textSize="@dimen/text_size_h2"
                android:layout_marginTop="@dimen/padding_big"
                android:layout_marginBottom="40dp"
                tools:ignore="PrivateResource" />

<!--            <ImageView
                android:id="@+id/signup_profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_add_profile_pic"
                android:layout_marginBottom="@dimen/padding_default"
                android:contentDescription="@string/add_user" />-->

            <com.cncoding.teazer.customViews.ProximaNovaRegularAutoCompleteTextView
                android:id="@+id/signup_username"
                style="@style/AppTheme.RoundedEditText"
                android:layout_marginBottom="24dp"
                android:hint="@string/choose_a_username"
                android:maxLength="15"
                android:inputType="text"
                android:digits="@string/validUsername"
                android:imeOptions="actionNext" />

            <com.cncoding.teazer.customViews.ProximaNovaRegularAutoCompleteTextView
                android:id="@+id/signup_password"
                style="@style/AppTheme.RoundedEditText"
                android:layout_marginBottom="24dp"
                android:hint="@string/password"
                android:maxLength="32"
                android:digits="@string/validPassword"
                android:inputType="textPassword"
                android:imeOptions="actionNext" />

<!--            <com.cncoding.teazer.customViews.ProximaNovaRegularAutoCompleteTextView
                android:id="@+id/signup_confirm_password"
                style="@style/AppTheme.RoundedEditText"
                android:hint="@string/confirm_password"
                android:maxLength="32"
                android:digits="@string/validPassword"
                android:inputType="textPassword"
                android:imeOptions="actionGo" />-->

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signup__proceed_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:text="@string/proceed"
                style="@style/AppTheme.RoundedMaterialButton" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>