<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cncoding.teazer.authentication.LoginFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    android:background="@drawable/bg_login">

    <com.cncoding.teazer.customViews.ProximaNovaRegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tell_me_a_little_bit_about_yourself"
        android:gravity="center"
        android:padding="@dimen/padding_default"
        android:textSize="@dimen/text_size_h4"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/login_layout"/>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_default"
        android:background="@drawable/bg_card"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="98dp">

        <AutoCompleteTextView
            android:id="@+id/signup_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_default"
            android:paddingBottom="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            android:hint="@string/your_email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            style="@style/AppTheme.RoundedTextView"/>

        <AutoCompleteTextView
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_default"
            android:paddingBottom="@dimen/padding_default"
            android:layout_margin="@dimen/padding_default"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLines="1"
            android:imeOptions="actionGo"
            style="@style/AppTheme.RoundedTextView"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_page_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_default"
            android:text="@string/finish"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/padding_double"
            android:layout_marginBottom="@dimen/padding_default"
            style="@style/AppTheme.RoundedMaterialButton"/>

    </LinearLayout>

</RelativeLayout>