<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cncoding.teazer.authentication.ForgotPasswordResetFragment"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal">

        <!--<include layout="@layout/custom_action_bar" />-->

        <com.cncoding.teazer.customViews.SignPainterTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:padding="@dimen/padding_default"
            android:textSize="@dimen/text_size_h2"
            android:layout_marginTop="@dimen/padding_big"/>

        <com.cncoding.teazer.customViews.ProximaNovaRegularAutoCompleteTextView
            android:id="@+id/forgot_pwd_reset_otp"
            style="@style/AppTheme.RoundedEditText"
            android:layout_marginTop="@dimen/padding_double"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/otp" />

        <com.cncoding.teazer.customViews.ProximaNovaRegularAutoCompleteTextView
            android:id="@+id/forgot_pwd_reset_new_password"
            style="@style/AppTheme.RoundedEditText"
            android:maxLength="32"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:hint="@string/new_password" />

        <com.cncoding.teazer.customViews.ProximaNovaRegularAutoCompleteTextView
            android:id="@+id/forgot_pwd_reset_confirm_password"
            style="@style/AppTheme.RoundedEditText"
            android:maxLength="32"
            android:inputType="textPassword"
            android:imeOptions="actionGo"
            android:hint="@string/confirm_password" />

        <com.cncoding.teazer.customViews.ProximaNovaSemiboldButton
            android:id="@+id/reset_pwd_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_content_big"
            android:padding="@dimen/padding_default"
            android:text="@string/reset_password"
            android:layout_marginTop="@dimen/padding_default"
            style="@style/AppTheme.RoundedMaterialButton" />

        <com.cncoding.teazer.customViews.ProximaNovaRegularTextView
            android:id="@+id/password_reset_status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary_text"
            android:layout_marginTop="@dimen/padding_double"
            android:layout_marginBottom="@dimen/padding_double"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>