<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_thin"
        android:background="@color/material_grey200"
        tools:context="com.cncoding.teazer.home.search.SearchFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card_no_margin"
            android:orientation="vertical">

            <com.cncoding.teazer.customViews.ProximaNovaBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_half"
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginStart="@dimen/padding_default"
                android:text="@string/most_popular"
                android:textSize="@dimen/text_size_content_big"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/most_popular_list"
                style="@style/BottomTabLayout.RecyclerView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_half"
            android:orientation="horizontal">

            <com.cncoding.teazer.customViews.ProximaNovaBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_half"
                android:text="@string/my_interests"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_content_big"/>

            <com.cncoding.teazer.customViews.ProximaNovaBoldTextView
                android:id="@+id/my_interests_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_half"
                android:text="@string/view_all"
                android:layout_gravity="center_vertical"
                android:foreground="@drawable/ripple_dark_no_rounded"
                android:textSize="@dimen/text_size_12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_card_no_margin">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_interests_list"
                style="@style/BottomTabLayout.RecyclerView" />

            <com.cncoding.teazer.customViews.ProximaNovaBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_half"
                android:layout_marginStart="@dimen/padding_half"
                android:paddingTop="@dimen/padding_half"
                android:paddingStart="@dimen/padding_half"
                android:paddingEnd="@dimen/padding_half"
                android:text="@string/trending"
                android:textSize="@dimen/text_size_content_big"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trending_list"
                style="@style/BottomTabLayout.RecyclerView" />

        </LinearLayout>

        <com.cncoding.teazer.customViews.ProximaNovaBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_half"
            android:padding="@dimen/padding_half"
            android:text="@string/featured_videos"
            android:textSize="@dimen/text_size_content_big"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/featured_videos_list"
            android:background="@drawable/bg_card_no_margin"
            style="@style/BottomTabLayout.RecyclerView" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>